# synesthesia

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
prompts/: live.md  research.md
scripts/: osc_listener.py
syn/: cli.py  config.py  session.py
syn/audio/: analysis.py  capture.py
syn/core/: prompt_loader.py
syn/input/: audio.py  base.py  factory.py  static.py
syn/llm/: client.py  schema.py
syn/log/: base.py  live.py  research.py
syn/modes/: live.py  research.py
syn/render/: renderer.py  state.py
tests/: conftest.py  test_audio_analysis.py  test_audio_capture.py  test_audio_input_source.py  test_cli.py  test_client.py  test_input_source.py  test_log.py  test_modes.py  test_prompt_loader.py  test_render_state.py  test_renderer.py  test_schema.py  test_session.py
