[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syn"
version = "0.1.0"
description = "syn - synesthesia engine"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "requests",
    "numpy",
    "sounddevice",
    "pygame",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
syn = "syn.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["syn*"]
